# stigrock-v1.2

./: README.md  pyproject.toml  stigrock_launcher.py
.github/workflows/: python-publish.yml
stiprog/: index.html  style.css
